@@ -1,3 +1,8 @@
+Tue Mar  1 13:58:04 CET 2011
+	Allow use of 'poll' in combination with the external select mode.
+	Avoid using pthread signals (SIGALRM), use pipe instead. 
+	Corrected timeout calculation (s vs. ms). -CG
+
 Wed Feb 23 14:21:44 CET 2011
 	Removing useless code pointed out by Eivind Sarto. -CG
 
